--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- header with navbar -->
-    <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+    <!-- <header>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+        <div class="container">
           <a class="navbar-brand" href="#">Navbar</a>
           <button
             class="navbar-toggler"
@@ -34,36 +35,47 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#">Things to do</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#"> Traveling Tips </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact Us</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-    </header>
-    <hr />
+    </header> -->
+
+    <!-- Hero Section -->
     <section>
       <div
-        id="carouselExampleSlidesOnly"
-        class="carousel slide"
-        data-bs-ride="carousel"
+        style="
+          background-image: url(images/heroImage.jpg);
+          height: 640px;
+          width: 100%;
+        "
+        class="position-relative"
       >
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="" class="d-block w-100" alt="..." style="height: 500px" />
-          </div>
-          <div class="carousel-item">
-            <img src="" class="d-block w-100" alt="..." style="height: 500px" />
-          </div>
-          <div class="carousel-item">
-            <img src="" class="d-block w-100" alt="..." style="height: 500px" />
-          </div>
+        <div
+          class="container position-absolute end-50 bottom-50 pt-5 text-white"
+        >
+          <h1>Recipes</h1>
         </div>
       </div>
     </section>
+
+    <!-- Footer -->
+    <!-- <footer>
+      <div class="container-fluid text-center">
+        <h1>Footer</h1>
+      </div>
+    </footer> -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
