--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   </head>
   <body>
     <!-- header with navbar -->
-    <!-- <header>
+    <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#"
+            ><img src="images/SLTravellogo1.png" alt="" style="height: 36px"
+          /></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -50,22 +52,150 @@
           </div>
         </div>
       </nav>
-    </header> -->
+    </header>
 
     <!-- Hero Section -->
-    <section>
-      <div
-        style="
-          background-image: url(images/heroImage.jpg);
-          height: 640px;
-          width: 100%;
-        "
-        class="position-relative"
-      >
-        <div
-          class="container position-absolute end-50 bottom-50 pt-5 text-white"
+    <section class="pt-5">
+      <div id="carouselExampleCaptions" class="carousel slide carousel-fade">
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/3.png" class="d-block w-100" alt="..." />
+            <div class="carousel-caption d-none d-md-block">
+              <h2>First slide label</h2>
+              <p>
+                Some representative placeholder content for the first slide.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/2.png" class="d-block w-100" alt="..." />
+            <div class="carousel-caption d-none d-md-block">
+              <h2>Second slide label</h2>
+              <p>
+                Some representative placeholder content for the second slide.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/1.png" class="d-block w-100" alt="..." />
+            <div class="carousel-caption d-none d-md-block">
+              <h2>Third slide label</h2>
+              <p>
+                Some representative placeholder content for the third slide.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/4.png" class="d-block w-100" alt="..." />
+            <div class="carousel-caption d-none d-md-block">
+              <h2>Fourth slide label</h2>
+              <p>
+                Some representative placeholder content for the fourth slide.
+              </p>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev"
         >
-          <h1>Recipes</h1>
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
+
+    <!-- Welcome section -->
+    <section class="welcome">
+      <div class="container pt-5">
+        <div class="row text-center">
+          <h1 class="welcometitle">
+            Welcome to
+            <span style="color: rgb(214, 44, 13); font-size: 3.2rem"
+              >Sri Lanka</span
+            >
+          </h1>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+            neque ducimus ipsa. Temporibus, repudiandae. Quaerat quibusdam
+            commodi veniam assumenda ad sapiente quae laborum voluptates. Iste
+            distinctio inventore ad id ratione asperiores exercitationem, minima
+            dolorem, ut soluta magnam officiis sunt excepturi?
+          </p>
+        </div>
+        <div class="row pt-4">
+          <div class="col-sm-12 col-lg-4">
+            <div class="card">
+              <img src="images/1.png" class="card-img-top" alt="..." />
+              <div class="card-body text-center">
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-lg-4">
+            <div class="card">
+              <img src="images/1.png" class="card-img-top" alt="..." />
+              <div class="card-body text-center">
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-lg-4">
+            <div class="card">
+              <img src="images/1.png" class="card-img-top" alt="..." />
+              <div class="card-body text-center">
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
