--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
   <body>
     <!-- header with navbar -->
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+      <nav
+        class="navbar navbar-expand-lg bg-body-tertiary fixed-top"
+        style="box-shadow: 1px 1px 12px rgb(104, 104, 104)"
+      >
         <div class="container">
           <a class="navbar-brand" href="#"
-            ><img src="images/SLTravellogo1.png" alt="" style="height: 36px"
+            ><img
+              src="images/SLTravellogo1.png"
+              alt=""
+              style="height: 36px; margin-left: 3rem"
           /></a>
           <button
             class="navbar-toggler"
@@ -37,7 +43,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Things to do</a>
+                <a class="nav-link" href="#">Places</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"> Traveling Tips </a>
@@ -154,44 +160,57 @@
               >Sri Lanka</span
             >
           </h1>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-            neque ducimus ipsa. Temporibus, repudiandae. Quaerat quibusdam
-            commodi veniam assumenda ad sapiente quae laborum voluptates. Iste
-            distinctio inventore ad id ratione asperiores exercitationem, minima
-            dolorem, ut soluta magnam officiis sunt excepturi?
+          <p class="text-secondary">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+            dolorum exercitationem reprehenderit veritatis odio pariatur iusto
+            maiores nihil. Ullam, eveniet hic! Facilis consequatur nihil
+            aspernatur eum error voluptatibus corrupti repellat obcaecati?
+            Repellendus voluptatibus sequi at? Pariatur beatae praesentium quas
+            id numquam nesciunt, consequuntur nihil, hic labore rerum molestiae.
+            Id natus eaque doloribus alias sint velit. Maxime deserunt, corporis
+            labore, consequatur, vel explicabo tempora odit sed suscipit quaerat
+            impedit nostrum placeat!
           </p>
         </div>
         <div class="row pt-4">
           <div class="col-sm-12 col-lg-4">
-            <div class="card">
+            <div class="card shadow">
               <img src="images/1.png" class="card-img-top" alt="..." />
               <div class="card-body text-center">
+                <h5>Title</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                  eius dignissimos tempore dolorem, sapiente numquam, sequi
+                  libero animi praesentium ratione nesciunt quam maxime.
+                  Mollitia placeat aliquam quidem adipisci voluptates labore.
                 </p>
               </div>
             </div>
           </div>
           <div class="col-sm-12 col-lg-4">
-            <div class="card">
+            <div class="card shadow">
               <img src="images/1.png" class="card-img-top" alt="..." />
               <div class="card-body text-center">
+                <h5>Title</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                  eius dignissimos tempore dolorem, sapiente numquam, sequi
+                  libero animi praesentium ratione nesciunt quam maxime.
+                  Mollitia placeat aliquam quidem adipisci voluptates labore.
                 </p>
               </div>
             </div>
           </div>
           <div class="col-sm-12 col-lg-4">
-            <div class="card">
+            <div class="card shadow">
               <img src="images/1.png" class="card-img-top" alt="..." />
               <div class="card-body text-center">
+                <h5>Title</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                  eius dignissimos tempore dolorem, sapiente numquam, sequi
+                  libero animi praesentium ratione nesciunt quam maxime.
+                  Mollitia placeat aliquam quidem adipisci voluptates labore.
                 </p>
               </div>
             </div>
@@ -200,12 +219,80 @@
       </div>
     </section>
 
+    <!-- Image collection -->
+    <section class="imagecollection">
+      <div class="container-fluid mt-5">
+        <div class="row">
+          <div class="col-sm-12 col-md-4">
+            <img src="images/4.png" alt="" class="d-block w-100 rounded-2" />
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <img src="images/4.png" alt="" class="d-block w-100 rounded-2" />
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <img src="images/4.png" alt="" class="d-block w-100 rounded-2" />
+          </div>
+        </div>
+        <div class="row mt-3">
+          <div class="col-md-8">
+            <img
+              src="images/4.png"
+              alt=""
+              class="d-block w-100 rounded-2"
+              style="height: 223px"
+            />
+          </div>
+          <div class="col-md-4">
+            <img src="images/4.png" alt="" class="d-block w-100 rounded-2" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Video section -->
+    <section class="videosection">
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-md-7 gx-5">
+            <h1 class="text-center">
+              <span class="text-danger" style="font-size: 3rem"
+                >Mind-Blowing</span
+              >
+              Places to Visit
+            </h1>
+            <p class="mt-3 text-center text-secondary">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem,
+              minima! Voluptate maxime iste a doloribus, minus in eos ea
+              obcaecati? Nisi necessitatibus ab fugiat illo atque corrupti ad!
+              Explicabo excepturi labore facilis veniam nemo quam pariatur
+              tempore in optio veritatis, atque culpa dolorum quos. Error
+              laudantium repellendus aperiam illum hic iure facere at amet
+              ratione.
+            </p>
+            <a href="#" class="readmorelink"> Read More </a>
+          </div>
+          <div class="col-md-5 text-center">
+            <iframe
+              class="rounded-3"
+              width="450"
+              height="250"
+              src="https://www.youtube.com/embed/buns7DpTL_I?si=9Eb7PwFn4usUCTDo"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer -->
-    <!-- <footer>
+    <footer>
       <div class="container-fluid text-center">
         <h1>Footer</h1>
       </div>
-    </footer> -->
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
