--- a/index.html
+++ b/index.html
@@ -253,14 +253,14 @@
     <section class="videosection">
       <div class="container mt-5">
         <div class="row">
-          <div class="col-md-7 gx-5">
-            <h1 class="text-center">
+          <div class="col-md-7 gx-5 text-center">
+            <h1>
               <span class="text-danger" style="font-size: 3rem"
                 >Mind-Blowing</span
               >
               Places to Visit
             </h1>
-            <p class="mt-3 text-center text-secondary">
+            <p class="mt-3 text-secondary">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem,
               minima! Voluptate maxime iste a doloribus, minus in eos ea
               obcaecati? Nisi necessitatibus ab fugiat illo atque corrupti ad!
