--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- header with navbar -->
     <header>
       <nav
-        class="navbar navbar-expand-lg bg-body-tertiary fixed-top"
+        class="navbar navbar-expand-lg bg-body-tertiary fixed-top shadow"
         style="box-shadow: 1px 1px 12px rgb(104, 104, 104)"
       >
         <div class="container">
@@ -43,7 +43,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Places</a>
+                <a class="nav-link" href="#">Places to visit</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"> Traveling Tips </a>
@@ -52,7 +52,9 @@
                 <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link text-light bg-dark rounded-2" href="#"
+                  >Contact Us</a
+                >
               </li>
             </ul>
           </div>
