--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         style="box-shadow: 1px 1px 12px rgb(104, 104, 104)"
       >
         <div class="container">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="index.html"
             ><img
               src="images/SLTravellogo1.png"
               alt=""
@@ -40,13 +40,15 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Places to visit</a>
+                <a class="nav-link" href="places.html">Places to visit</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"> Traveling Tips </a>
+                <a class="nav-link" href="tips.html"> Traveling Tips </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
@@ -294,7 +296,7 @@
       <div class="container-fluid bg-dark">
         <div class="row">
           <div
-            class="d-flex align-items-center justify-content-center col-sm-12 col-md-4 mt-md-4"
+            class="container d-flex align-items-center justify-content-center col-sm-12 col-md-4 mt-md-4"
           >
             <img
               src="images/SLTravellogo1.png"
