changed some options

--- a/places.html
+++ b/places.html
@@ -67,7 +67,18 @@
 
     <section class="placessection container-fluid" style="margin-top: 3rem">
       <div class="row">
-        <div class="col-2 mt-3">
+        <div class="col-1 d-block d-md-none">
+          <button class="border-0 bg-light pr-4 position-fixed mt-5">
+            <img
+              src="images/icons8-arrow-50.png"
+              alt=""
+              class="d-block"
+              style="height: 35px; width: 30px"
+            />
+          </button>
+        </div>
+
+        <div class="col-2 mt-3 d-none d-md-block">
           <ul>
             <li><a href="#">Colombo</a></li>
             <li><a href="#kandy">Kandy</a></li>
@@ -81,11 +92,15 @@
             <li><a href="#anuradhapura">Anuradhapura</a></li>
           </ul>
         </div>
-        <div class="col-10">
+        <div class="placescontent col-10">
           <div class="container-fluid">
             <h1 id="colombo"><span>1.</span>Colombo</h1>
             <div class="container text-center">
-              <img src="images/colombo.jpg" alt="" class="img-fluid" />
+              <img
+                src="images/colombo.jpg"
+                alt=""
+                class="img-fluid rounded-3"
+              />
             </div>
 
             <p>
@@ -105,8 +120,8 @@
               quisquam atque autem.
             </p>
             <h1 id="kandy"><span>2.</span>Kandy</h1>
-            <div class="container">
-              <img src="images/kandy1.jpg" alt="" class="img-fluid" />
+            <div class="container text-center">
+              <img src="images/kandy1.jpg" alt="" class="img-fluid rounded-3" />
             </div>
 
             <p>
@@ -119,8 +134,12 @@
               impedit excepturi.
             </p>
             <h1 id="nuwaraeliya"><span>3.</span>Nuwara Eliya</h1>
-            <div class="container">
-              <img src="images/nuwaraeliya.jpg" alt="" class="img-fluid" />
+            <div class="container text-center">
+              <img
+                src="images/nuwaraeliya.jpg"
+                alt=""
+                class="img-fluid rounded-3"
+              />
             </div>
 
             <p>
@@ -133,8 +152,8 @@
               impedit excepturi.
             </p>
             <h1 id="ella"><span>4.</span>Ella</h1>
-            <div class="container">
-              <img src="images/ella.jpg" alt="" class="img-fluid" />
+            <div class="container text-center">
+              <img src="images/ella.jpg" alt="" class="img-fluid rounded-3" />
             </div>
 
             <p>
@@ -147,8 +166,12 @@
               impedit excepturi.
             </p>
             <h1 id="bentota"><span>5.</span>Bentota</h1>
-            <div class="container">
-              <img src="images/bentota.jpg" alt="" class="img-fluid" />
+            <div class="container text-center">
+              <img
+                src="images/bentota.jpg"
+                alt=""
+                class="img-fluid rounded-3"
+              />
             </div>
 
             <p>
@@ -161,8 +184,12 @@
               impedit excepturi.
             </p>
             <h1 id="pinnawala"><span>6.</span>Pinnawala Elephant Orphanage</h1>
-            <div class="container">
-              <img src="images/pinnawala.jpg" alt="" class="img-fluid" />
+            <div class="container text-center">
+              <img
+                src="images/pinnawala.jpg"
+                alt=""
+                class="img-fluid rounded-3"
+              />
             </div>
 
             <p>
@@ -175,8 +202,8 @@
               impedit excepturi.
             </p>
             <h1 id="yala"><span>7.</span>Yala National Park</h1>
-            <div class="container">
-              <img src="images/yala.jpg" alt="" class="img-fluid" />
+            <div class="container text-center">
+              <img src="images/yala.jpg" alt="" class="img-fluid rounded-3" />
             </div>
 
             <p>
@@ -189,8 +216,12 @@
               impedit excepturi.
             </p>
             <h1 id="sigiriya"><span>8.</span>Sigiriya</h1>
-            <div class="container">
-              <img src="images/sigiriya.jpg" alt="" class="img-fluid" />
+            <div class="container text-center">
+              <img
+                src="images/sigiriya.jpg"
+                alt=""
+                class="img-fluid rounded-3"
+              />
             </div>
 
             <p>
@@ -203,8 +234,12 @@
               impedit excepturi.
             </p>
             <h1 id="adamsrock"><span>9.</span>Adams Rock</h1>
-            <div class="container">
-              <img src="images/adamsrock.jpg" alt="" class="img-fluid" />
+            <div class="container text-center">
+              <img
+                src="images/adamsrock.jpg"
+                alt=""
+                class="img-fluid rounded-3"
+              />
             </div>
 
             <p>
@@ -217,8 +252,12 @@
               impedit excepturi.
             </p>
             <h1 id="anuradhapura"><span>10.</span>Anuradhapura</h1>
-            <div class="container">
-              <img src="images/anuradhapura.jpg" alt="" class="img-fluid" />
+            <div class="container text-center">
+              <img
+                src="images/anuradhapura.jpg"
+                alt=""
+                class="img-fluid rounded-3"
+              />
             </div>
 
             <p>
