changed styles and slight changes on index

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         class="navbar navbar-expand-lg bg-body-tertiary fixed-top shadow"
         style="box-shadow: 1px 1px 12px rgb(104, 104, 104)"
       >
-        <div class="container">
+        <div class="container w-100">
           <a class="navbar-brand" href="index.html"
             ><img
               src="images/SLTravellogo1.png"
               alt=""
-              style="height: 38px; margin-left: 3rem"
+              style="height: 38px; margin-left: 3.5rem"
           /></a>
           <button
             class="navbar-toggler"
@@ -54,9 +54,7 @@
                 <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light bg-dark rounded-2" href="#"
-                  >Contact Us</a
-                >
+                <a class="nav-link" href="#">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -250,6 +248,17 @@
             <img src="images/4.png" alt="" class="d-block w-100 rounded-2" />
           </div>
         </div>
+        <div class="row mt-3">
+          <div class="col-sm-12 col-md-4">
+            <img src="images/4.png" alt="" class="d-block w-100 rounded-2" />
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <img src="images/4.png" alt="" class="d-block w-100 rounded-2" />
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <img src="images/4.png" alt="" class="d-block w-100 rounded-2" />
+          </div>
+        </div>
       </div>
     </section>
 
@@ -273,7 +282,7 @@
               laudantium repellendus aperiam illum hic iure facere at amet
               ratione.
             </p>
-            <a href="#" class="readmorelink"> Read More </a>
+            <a href="index.html" class="readmorelink"> Read More </a>
           </div>
           <div class="col-md-5 text-center">
             <iframe
