--- a/tips.html
+++ b/tips.html
@@ -50,9 +50,7 @@
               <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light bg-dark rounded-2" href="#"
-                >Contact Us</a
-              >
+              <a class="nav-link" href="#">Contact Us</a>
             </li>
           </ul>
         </div>
