did some styling and changes

--- a/places.html
+++ b/places.html
@@ -23,7 +23,7 @@
             ><img
               src="images/SLTravellogo1.png"
               alt=""
-              style="height: 38px; margin-left: 3rem"
+              style="height: 38px; margin-left: 3.5rem"
           /></a>
           <button
             class="navbar-toggler"
@@ -67,10 +67,11 @@
       <div class="row">
         <div class="col-1 d-block d-md-none">
           <button
-            class="border-0 bg-light pr-4 position-fixed mt-5"
+            class="border-0 bg-light pr-4 position-fixed"
             data-bs-toggle="offcanvas"
             data-bs-target="#offcanvasWithBothOptions"
             aria-controls="offcanvasWithBothOptions"
+            style="margin-top: 12rem"
           >
             <img
               src="images/icons8-arrow-50.png"
@@ -79,6 +80,7 @@
               style="height: 35px; width: 30px"
             />
           </button>
+
           <div
             class="offcanvas offcanvas-start"
             data-bs-scroll="true"
@@ -235,6 +237,7 @@
               fuga tenetur aspernatur accusantium, quas facere aliquam culpa
               nostrum, veritatis iusto.
             </p>
+            <hr />
             <h1 id="kandy"><span>2.</span>Kandy</h1>
             <div class="container text-center">
               <img src="images/kandy1.jpg" alt="" class="img-fluid rounded-3" />
@@ -260,6 +263,7 @@
               eligendi minima vero soluta est, reiciendis inventore ipsam
               temporibus aspernatur quaerat.
             </p>
+            <hr />
             <h1 id="nuwaraeliya"><span>3.</span>Nuwara Eliya</h1>
             <div class="container text-center">
               <img
@@ -289,6 +293,7 @@
               eligendi minima vero soluta est, reiciendis inventore ipsam
               temporibus aspernatur quaerat.
             </p>
+            <hr />
             <h1 id="ella"><span>4.</span>Ella</h1>
             <div class="container text-center">
               <img src="images/ella.jpg" alt="" class="img-fluid rounded-3" />
@@ -314,6 +319,7 @@
               eligendi minima vero soluta est, reiciendis inventore ipsam
               temporibus aspernatur quaerat.
             </p>
+            <hr />
             <h1 id="bentota"><span>5.</span>Bentota</h1>
             <div class="container text-center">
               <img
@@ -343,6 +349,7 @@
               eligendi minima vero soluta est, reiciendis inventore ipsam
               temporibus aspernatur quaerat.
             </p>
+            <hr />
             <h1 id="pinnawala"><span>6.</span>Pinnawala Elephant Orphanage</h1>
             <div class="container text-center">
               <img
@@ -372,6 +379,7 @@
               eligendi minima vero soluta est, reiciendis inventore ipsam
               temporibus aspernatur quaerat.
             </p>
+            <hr />
             <h1 id="yala"><span>7.</span>Yala National Park</h1>
             <div class="container text-center">
               <img src="images/yala.jpg" alt="" class="img-fluid rounded-3" />
@@ -397,6 +405,7 @@
               eligendi minima vero soluta est, reiciendis inventore ipsam
               temporibus aspernatur quaerat.
             </p>
+            <hr />
             <h1 id="sigiriya"><span>8.</span>Sigiriya</h1>
             <div class="container text-center">
               <img
@@ -426,6 +435,7 @@
               eligendi minima vero soluta est, reiciendis inventore ipsam
               temporibus aspernatur quaerat.
             </p>
+            <hr />
             <h1 id="adamsrock"><span>9.</span>Adams Rock</h1>
             <div class="container text-center">
               <img
@@ -455,6 +465,7 @@
               eligendi minima vero soluta est, reiciendis inventore ipsam
               temporibus aspernatur quaerat.
             </p>
+            <hr />
             <h1 id="anuradhapura"><span>10.</span>Anuradhapura</h1>
             <div class="container text-center">
               <img
