added a feature card section with image

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
               laudantium repellendus aperiam illum hic iure facere at amet
               ratione.
             </p>
-            <a href="index.html" class="readmorelink"> Read More </a>
+            <a href="places.html" class="readmorelink"> Read More </a>
           </div>
           <div class="col-md-5 text-center">
             <iframe
@@ -300,19 +300,52 @@
       </div>
     </section>
 
+    <!-- Feature Card section -->
+    <section>
+      <!-- <div class="container-fluid"> -->
+      <div class="card text-bg-dark mt-5" id="explorecard">
+        <img
+          src="images/SigiriyaCardImg.png"
+          class="card-img d-block"
+          alt="..."
+          style="height: 430px"
+        />
+        <div class="card-img-overlay text-center">
+          <h1 class="card-title mt-5">
+            EXPLORE <span class="text-"> SRILANKA</span>
+          </h1>
+          <h6 class="card-text mt-5">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eos
+            corrupti quo quos temporibus aut ullam doloremque illo error
+            repellendus. Eveniet, voluptatibus! Laborum ut vero iure,
+            perspiciatis cum veritatis repellendus animi recusandae
+            consequuntur, sit unde. Sapiente aliquid possimus id cupiditate
+            voluptate voluptatum voluptates repellat voluptas odio dignissimos
+            cum, illo fuga.
+          </h6>
+          <button class="exploreBtn mt-5">
+            <span>Explore More</span>
+          </button>
+        </div>
+      </div>
+      <!-- </div> -->
+    </section>
+
     <!-- Footer -->
     <footer class="footersection mt-5">
-      <div class="container-fluid bg-dark">
+      <div class="container-fluid" style="background-color: black">
         <div class="row">
           <div
             class="container d-flex align-items-center justify-content-center col-sm-12 col-md-4 mt-md-4"
           >
-            <img
-              src="images/SLTravellogo1.png"
-              alt=""
-              style="height: 90px; width: 230px"
-              class="img-fluid"
-            />
+            <a href="index.html">
+              <img
+                src="images/SLTravellogodark.png"
+                alt=""
+                style="height: 90px; width: 230px"
+                class="img-fluid"
+              />
+            </a>
           </div>
           <div class="col-sm-12 col-md-4 text-center mt-md-4 mt-sm-3">
             <ul class="">
