--- a/places.html
+++ b/places.html
@@ -67,11 +67,11 @@
       <div class="row">
         <div class="col-1 d-block d-md-none">
           <button
-            class="border-0 bg-light pr-4 position-fixed"
+            class="border-0 pr-4 position-fixed"
             data-bs-toggle="offcanvas"
             data-bs-target="#offcanvasWithBothOptions"
             aria-controls="offcanvasWithBothOptions"
-            style="margin-top: 12rem"
+            style="margin-top: 12rem; background-color: white;"
           >
             <img
               src="images/icons8-arrow-50.png"
