--- a/tips.html
+++ b/tips.html
@@ -50,6 +50,9 @@
               <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#">Personal Info</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#">Contact Us</a>
             </li>
           </ul>
